--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,7 @@
 
     package="com.example.captcam1">
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <uses-feature android:name="android.hardware.camera2" />
     
 
 
@@ -21,7 +17,15 @@
         <activity android:name=".confirmacion" />
         <activity android:name=".homeUsuario" />
         <activity android:name=".Registro" />
+        <activity android:name=".camaraDetect"/>
         <activity android:name=".AuthActivity">
+        
+
+            <meta-data
+                android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+                android:value="face"/>
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
