--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,23 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
 
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/camera"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_logo"
+        android:roundIcon="@drawable/camera"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".interface_captcam.confirmacion" />
         <activity android:name=".interface_captcam.homeUsuario" />
         <activity android:name=".interface_captcam.Registro" />
-
+        <activity android:name=".interface_captcam.CameraActivity" />
+        <activity android:name=".interface_captcam.DetectorActivity" />
         <activity android:name=".interface_captcam.AuthActivity">
 
 
