--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.captcam1" >
 
-    package="com.example.captcam1">
-
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
+        <uses-permission android:name="30" />
 
     <application
         android:allowBackup="true"
@@ -22,19 +19,29 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/camera"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar" >
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/file_paths" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.captcam1.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity android:name=".interface_captcam.homeUsuario" />
         <activity android:name=".interface_captcam.Registro" />
         <activity android:name=".interface_captcam.CameraActivity" />
         <activity android:name=".interface_captcam.DetectorActivity" />
-        <activity android:name=".interface_captcam.AuthActivity">
-
-
-
+        <activity android:name=".interface_captcam.AuthActivity" >
             <meta-data
                 android:name="com.google.firebase.ml.vision.DEPENDENCIES"
-                android:value="face"/>
-
+                android:value="face" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
