--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="UISRAEL.JCofre.CAPTCAM" >
+    package="UISRAEL.JCofre.CAPTCAM">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -8,10 +8,9 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-        <uses-permission android:name="30" />
+    <uses-permission android:name="30" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +18,18 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/camera"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar" >
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name=".presentacionAct"
+
+            android:theme="@style/Theme.Design.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/file_paths" />
@@ -28,26 +38,22 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="UISRAEL.JCofre.CAPTCAM.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name="UISRAEL.JCofre.CAPTCAM.homeUsuario" />
-        <activity android:name="UISRAEL.JCofre.CAPTCAM.Registro" />
-        <activity android:name="UISRAEL.JCofre.CAPTCAM.cameraActivity" />
-        <activity android:name="UISRAEL.JCofre.CAPTCAM.detectorActivity" />
-        <activity android:name="UISRAEL.JCofre.CAPTCAM.authActivity" >
+        <activity android:name=".homeUsuario" />
+        <activity android:name=".registroUsuario" />
+        <activity android:name=".cameraActivity" />
+        <activity android:name=".detectorActivity" />
+        <activity android:name=".authActivity">
             <meta-data
                 android:name="com.google.firebase.ml.vision.DEPENDENCIES"
                 android:value="face" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
