--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility sourceCompatibility
+        targetCompatibility targetCompatibility
     }
     lintOptions {
         abortOnError false
@@ -62,7 +62,7 @@ dependencies {
     implementation 'com.android.support:design:30.0.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
-
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 
     implementation 'com.wonderkiln:camerakit:0.13.1'
     implementation 'com.google.firebase:firebase-core:18.0.2'
@@ -84,5 +84,8 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-text:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite:2.4.0'
     implementation 'com.airbnb.android:lottie:3.6.1'
+    implementation('org.tensorflow:tensorflow-lite:2.4.0') { changing = true }
+    implementation('org.tensorflow:tensorflow-lite-gpu:2.2.0') { changing = true }
+    implementation('org.tensorflow:tensorflow-lite-support:0.1.0') { changing = true }
 
 }
